# hookglot

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.th.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  languages.md  methods.md  providers.md  troubleshooting.md
hookglot/: __init__.py  __main__.py  config.py  format_preservation.py  language.py
hookglot/cli/: __init__.py  commands.py
hookglot/hooks/: __init__.py  translate_input.py  translate_output.py
hookglot/translators/: __init__.py  anthropic.py  base.py  factory.py  google.py  ollama.py  openai_compatible.py
prompts/core/: master_prompt.en.md  master_prompt.th.md
prompts/method_overlay/: method1.md  method2.md
prompts/slash_commands/: hookglot-clear-chat.md  hookglot-lang.md  hookglot-method.md  hookglot-off.md  hookglot-status.md  hookglot-test.md  hookglot-translator.md
scripts/: install.ps1  install.sh
settings/: method1_oneway.json  method2_outputonly.json
tests/: test_format_preservation.py  test_sanity.py
