[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hookglot"
version = "1.2.0"
description = "Translation hooks for Claude Code — multi-language, multi-provider"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "hookglot contributors"}
]
keywords = ["claude-code", "translation", "hooks", "i18n", "ollama", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/hookglot"
Issues = "https://github.com/yourusername/hookglot/issues"
Repository = "https://github.com/yourusername/hookglot"

[project.scripts]
hookglot = "hookglot.cli.commands:main"

[tool.setuptools.packages.find]
include = ["hookglot*"]

[tool.setuptools.package-data]
hookglot = [
    "../prompts/**/*.md",
    "../settings/*.json",
]

[tool.ruff]
line-length = 100
target-version = "py310"
